[package]
name = "rustchain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
blake2 = "0.11.0-pre.3"
rand = "0.8.5"
hex-literal = "0.4.1"
digest = "0.10.7"
ring = "0.17.8"
hex = "0.4.3"
